k8s/adguard/deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard-home
  namespace: adguard
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: adguard-home
  template:
    metadata:
      labels:
        app: adguard-home
    spec:
      containers:
        - name: adguard-home
          image: adguard/adguardhome:v0.107.79
          ports:
            - containerPort: 3000  # Web UI
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /opt/adguardhome/conf
            - name: data
              mountPath: /opt/adguardhome/work
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: adguard-config
        - name: data
          persistentVolumeClaim:
            claimName: adguard-data
