k8s/adguard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard-service
  namespace: adguard
spec:
  selector:
    app: adguard-home
  type: LoadBalancer
  loadBalancerIP: 192.168.68.98
  externalTrafficPolicy: Local
  ports:
    # - name: dns-udp
    #   protocol: UDP
    #   port: 53
    #   targetPort: 53
    # - name: dns-tcp
    #   protocol: TCP
    #   port: 53
    #   targetPort: 53
    - name: web-ui
      protocol: TCP
      port: 3000
      targetPort: 3000
